refactor moar